Added benchmarks for 64-bit and 255-bit primes.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,10 @@ edition = "2018"
 num-bigint = "0.2"
 num-integer = "0.1"
 num-traits = "0.2"
+
+[dev-dependencies]
+criterion = "0.2.10"
+
+[[bench]]
+name = "bench"
+harness = false
